# rust-cfbd

./: .gitignore  Cargo.toml
.github/workflows/: test.yml
examples/: get_coaches.rs  get_conferences.rs  get_drives.rs  get_game_media.rs  get_games.rs  get_player_season_stats.rs  get_plays.rs  get_rankings.rs  get_recruiting_players.rs  get_recruiting_teams.rs  get_roster.rs  get_season_stats.rs  get_teams.rs  get_user_info.rs  get_venues.rs
src/: client.rs  config.rs  error.rs  lib.rs
src/common/: conversion.rs
src/endpoints/: coaches.rs  conference.rs  drives.rs  games.rs  info.rs  mod.rs  plays.rs  rankings.rs  recruiting.rs  stats.rs  teams.rs  venues.rs
src/models/: mod.rs  season_type.rs
src/models/cfb/: coach.rs  conference.rs  drive.rs  drive_query.rs  game.rs  game_media.rs  game_media_params.rs  get_game_params.rs  get_recruit_players_params.rs  media_type.rs  mod.rs  play.rs  play_query.rs  poll_week.rs  ranking_query.rs  recruit.rs  recruit_player_query.rs  recruit_team_query.rs  recruit_type.rs  roster_player.rs  roster_query.rs  stats_player_season_query.rs  team.rs  team_params.rs  venue.rs
src/models/shared/: info.rs  location.rs  mod.rs
tests/: coaches_test.rs  conference_test.rs  drives_test.rs  games_test.rs  info_test.rs  plays_test.rs  rankings_test.rs  recruiting_test.rs  rosters_test.rs  stats_test.rs  teams_test.rs  venues_test.rs
tests/common/: mod.rs
tests/common/fixtures/: coaches_all_params.json  coaches_first_name.json  coaches_last_name.json  coaches_max_year.json  coaches_min_year.json  coaches_no_params.json  (+62 more)
(+48 files in other folders)
